--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ section {
 .circle-shape {
   width: 15vh; /* 크기 증가 */
   height: 15vh; /* 크기 증가 */
-  top: 10%; /* 위치 조정 */
+  top: 30%; /* 위치 조정 */
   left: 5%;
   border-radius: 50%;
   animation-delay: 0.2s;
@@ -75,8 +75,8 @@ section {
 .square-shape {
   width: 15vh; /* 크기 증가 */
   height: 15vh; /* 크기 증가 */
-  top: 10%; /* 위치 조정 */
-  right: 5%;
+  top: 7%; /* 위치 조정 */
+  right: 7%;
   animation-delay: 0.4s;
 }
 
@@ -87,19 +87,19 @@ section {
   z-index: 0; /* z-index를 0으로 설정하여 배경으로 유지 */
   width: 0;
   height: 0;
-  border-left: 10vh solid transparent; /* 크기 증가 */
-  border-right: 10vh solid transparent; /* 크기 증가 */
-  border-bottom: 16vh solid #c1d5e0; /* 도형 색상 */
-  bottom: 25%;
-  left: 20%;
+  border-left: 8vh solid transparent; /* 크기 증가 */
+  border-right: 8vh solid transparent; /* 크기 증가 */
+  border-bottom: 13vh solid #c1d5e0; /* 도형 색상 */
+  bottom: 19%;
+  left: 10%;
   animation-delay: 0.6s;
 }
 
 .star-shape {
-  width: 15vh; /* 크기 증가 */
-  height: 15vh; /* 크기 증가 */
-  top: 65%;
-  right: 20%;
+  width: 10vh; /* 크기 증가 */
+  height: 10vh; /* 크기 증가 */
+  bottom: 7%;
+  right: 7%;
   background-color: #c1d5e0; /* 도형 색상 */
   clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
   animation-delay: 0.8s;
@@ -266,11 +266,25 @@ section {
   color: #2a3d55;
 }
 
-.content p {
-  margin-bottom: 1rem;
+/*하이 라이트 효과*/
+strong { 
+	text-decoration: none;
+	transition: all .5s ease-out;
+	background-repeat: no-repeat;
 }
 
+strong {
+	background-size: 0% 80%;
+	background-position-x: 0%;
+}
 
+strong {
+	background-size: 100% 80%;
+  background-position-y: 100%;
+  background-image: linear-gradient(rgb(212 220 255), rgb(212 220 255));
+  transition: all .5s ease-out;
+  background-repeat: no-repeat;
+}
 
 /*본문 페이지*/
 .content .main {
@@ -290,8 +304,6 @@ section {
   padding: 1rem; /* 안쪽 여백 추가 */
   margin-left: 20px; /* 첫 번째 자식과의 간격을 늘리기 위한 왼쪽 여백 추가 */
 }
-
-
 
 /* 홀수는 왼쪽에 설명, 오른쪽은 빈 공간 */
 section:nth-child(odd) .content.main .main {
@@ -357,6 +369,50 @@ section:nth-child(even) .content.main .main {
   background-image: url(./foods.png);
   background-position: center;
   background-size: 110%;
+}
+
+.image.safe {
+  background-image: url(./safes.png);
+  background-position: center;
+  background-size: 100%;
+}
+
+/* 마지막 페이지 스타일 */
+#last-page {
+  background-color: #f7fafc; /* 밝은 색상으로 변경 */
+}
+
+#last-page .content h2 {
+  color: #2a3d55;
+}
+
+#last-page .content .main .half {
+  color: #333;
+  width: 50%;
+  max-width: 50%;
+}
+
+#last-page .content .main .half p {
+  word-break: break-all;
+}
+
+#last-page .content .main .half:first-child {
+  padding-right: 20px; /* 텍스트 영역과 이미지 간격 */
+}
+
+#last-page .content .main .half .image {
+  background-image: url(./future.png); /* 미래를 상징하는 이미지 */
+  background-position: center;
+  background-size: cover;
+  min-height: 200px;
+}
+
+/* 마지막 메시지 스타일 */
+.ending-message {
+  text-align: center;
+  margin-top: 2rem;
+  color: #6f8096;
+  font-size: 1.2rem;
 }
 
 @media (max-width: 768px) {
@@ -460,6 +516,12 @@ section:nth-child(even) .content.main .main {
     color: #2a3d55; /* 글씨 색상 */
     font-size: 0.8rem;
     width: 100%;
+  }
+
+  #last-page .content .main .half {
+    color: #333;
+    width: 100%;
+    max-width: 100%;
   }
 }
 @media (max-width: 400px) {
